After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689012 - "Copy file's location" menu item in file chooser dialog uses tick mark instead of apostrophe
"Copy file's location" menu item in file chooser dialog uses tick mark instea...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2012-11-25 06:07 UTC by Timothy Arceri
Modified: 2012-11-29 17:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use real apostrophe patch (26.46 KB, patch)
2012-11-25 06:11 UTC, Timothy Arceri
accepted-commit_now Details | Review

Description Timothy Arceri 2012-11-25 06:07:22 UTC
This is a minor typography issue that comes from and upstream bug: https://bugs.launchpad.net/hundredpapercuts/+bug/896986

As the summary indicates a proper apostrophe should be used in file's rather than a tick. e.g file’s not file's
Comment 1 Timothy Arceri 2012-11-25 06:11:13 UTC
Created attachment 229802 [details] [review]
Use real apostrophe patch

I've attached a patch that updates this in the code as well as in the translations.
Comment 2 Matthias Clasen 2012-11-26 01:23:03 UTC
Review of attachment 229802 [details] [review]:

Its a bit like changing asking software engineers to change a lightbulb: change 50+ files to affect a single language...

But whatever, looks ok to me
Comment 3 Timothy Arceri 2012-11-26 03:43:14 UTC
I guess if real ids where used rather than US English this wouldn't be so bad but then you create a whole new problem of ids becoming meaningless over time as text changes.

Anyway, thanks for reviewing and can someone with git access please commit my patch.

Thanks,
Tim
Comment 4 Federico Mena Quintero 2012-11-29 17:37:17 UTC
Good eye, thanks!  Pushed to master.