In the file chooser, use a proper apostrophe rather than a prime mark (tick mark)

https://bugzilla.gnome.org/show_bug.cgi?id=689012